--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,25 @@
 body {
-    padding-top: 40px;
-    background-color:#C0C0C0;
+    padding: 40px;
+    background-color:#fff;
 }
  
  
 img { 
     max-width: 100%;
     height: auto;
+    padding:10px;
+    background-color: #ffffff;
+;
+}
+.container{
+padding:40px;
+background-color:#C0C0C0;
+
+}
+h2 , h3{
+text-transform: uppercase;
+font-size:120%;
+
 }
 /* iPad Portrait/Browser */
     @media only screen and (min-width: 768px) and (max-width: 991px) {
