--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     padding: 40px;
     background-color:#fff;
+    font-family: 'Lato', sans-serif;
 }
  
  
@@ -9,7 +10,13 @@ img {
     height: auto;
     padding:10px;
     background-color: #ffffff;
-;
+
+}
+.one-half img {
+
+    padding:5px;
+    background-color: #ffffff;
+
 }
 .container{
 padding:40px;
@@ -22,6 +29,22 @@ font-size:120%;
 font-weight:bold;
 
 }
+.details {
+
+border:1px solid black;
+padding: 15px;
+background-color:#D0D0D0 
+
+}
+li {
+list-style-type: square;
+margin-left:1px;
+
+}
+hr { 
+    border-width: .5px;
+    border-color: black;
+} 
 /* iPad Portrait/Browser */
     @media only screen and (min-width: 768px) and (max-width: 991px) {
         #nav ul li {
